# Copyright 2021 The Tint Authors
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build_overrides/build.gni")
import("../../tint_overrides_with_defaults.gni")

if (build_with_chromium) {
  source_set("tint_spirv_tools_fuzzer") {
    public_configs = [
      "${tint_root_dir}/src:tint_config",
      "${tint_root_dir}/src:tint_common_config",
    ]

    include_dirs = [ "${root_gen_dir}/third_party/vulkan-deps/spirv-tools/src" ]

    deps = [
      "${tint_root_dir}/fuzzers:tint_fuzzer_common",
      "${tint_spirv_tools_dir}/:spvtools_fuzz",
      "${tint_spirv_tools_dir}/:spvtools_opt",
      "${tint_spirv_tools_dir}/:spvtools_reduce",
      "//third_party/protobuf:protobuf_full",
    ]

    sources = [
      "cli.cc",
      "cli.h",
      "fuzzer.cc",
      "mutator.cc",
      "mutator.h",
      "mutator_cache.cc",
      "mutator_cache.h",
      "spirv_fuzz_mutator.cc",
      "spirv_fuzz_mutator.h",
      "spirv_opt_mutator.cc",
      "spirv_opt_mutator.h",
      "spirv_reduce_mutator.cc",
      "spirv_reduce_mutator.h",
      "util.cc",
      "util.h",
    ]
  }
}
